[package]
name = "oponn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.3.1"
bson = { version = "2.5.0", features = ["chrono-0_4"] } # Needed for using chrono datetime in doc
tokio = "1.24.1"
serde = "1.0.151"
dotenv = "0.15.0"
anyhow = "1.0.69"
