[package]
name = "datastore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.3.1"
bson = { version = "2.5.0", features = ["chrono-0_4"] } # Needed for using chrono datetime in doc
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
anyhow = "1.0.69"
futures = "0.3.26"
mongod = { version = "0.3", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = {version = "0.11.14", features = ["json"]}
serde_json = "1.0.93"

